--- a/styles.css
+++ b/styles.css
@@ -222,3 +222,9 @@ input[type="submit"] {
   cursor: pointer;
   font-size: 16px;
 } */
+#error {
+  color: rgb(149, 13, 13);
+  background-color: rgb(253, 167, 133);
+  border-radius: 10px;
+  padding: 10px;
+}
