--- a/styles.css
+++ b/styles.css
@@ -228,3 +228,9 @@ input[type="submit"] {
   border-radius: 10px;
   padding: 10px;
 }
+#succ {
+  color: darkgreen;
+  background-color: rgb(179, 248, 184);
+  border-radius: 10px;
+  padding: 10px;
+}
