--- a/styles.css
+++ b/styles.css
@@ -234,3 +234,19 @@ input[type="submit"] {
   border-radius: 10px;
   padding: 10px;
 }
+
+.btn-acc {
+  background-color: #6cea94;
+  color: #fff;
+  border: 1px solid #;
+  padding: 10px 20px;
+  border-radius: 40px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.btn-acc:hover{
+  scale: 110%;
+  transition: 300ms ease;
+  background-color: rgb(109, 228, 145);
+  color: black;
+}
