--- a/styles.css
+++ b/styles.css
@@ -250,3 +250,86 @@ input[type="submit"] {
   background-color: rgb(109, 228, 145);
   color: black;
 }
+
+.removeBtn{
+  border-radius: 100px;
+  padding: 6px;
+  font-size: 10px; 
+  margin: 10px;
+  background-color: lightcoral;
+}
+.removeBtn:hover{
+  scale: 1.2;
+  color: white;
+  background-color: crimson;
+}
+
+#orderSummary{
+  font-size: 20px;
+  font-family: Helvetica;
+  background-color: lightblue;
+  width: 50%;
+}
+
+#timerDisplay{
+  background-color: rgb(244, 162, 162);
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+
+
+
+
+
+/* Ice cream waiting screen styling */
+.loader {
+  height: 150px;
+  width: 100px;
+  border-radius: 55px 55px 10px 10px;
+  position: relative;
+  background: #FF3D00;
+  background-image: linear-gradient(0deg,
+    #f63a99 25%,
+    #30dcf6 25%,
+    #30dcf6 25%,
+    #30dcf6 50%,
+    #f2d200 50%,
+    #f2d200 50%,
+    #f2d200 75%,
+    #70ca5c 75%);
+  background-position: 0px 0px;
+  background-size: auto 175px;
+  background-repeat: repeat-y;
+  animation: colorShift 6s linear infinite;
+}
+
+.loader:before {
+  content: '';
+  position: absolute;
+  left: 10px;
+  bottom: 15px;
+  width: 15px;
+  height: 100px;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.loader:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translate(-50% , 0);
+  box-shadow: 0 15px 2px rgba(0, 0, 0, 0.25) inset;
+  width: 32px;
+  height: 45px;
+  background: #E09C5F;
+  border-radius: 0 0 12px 12px;
+}
+
+@keyframes colorShift {
+  to {
+    background-position: 0 175px
+  }
+}
+  
