--- a/styles.css
+++ b/styles.css
@@ -235,18 +235,33 @@ input[type="submit"] {
   padding: 10px;
 }
 
+#order-btn{
+  color: black;
+  background-color: mediumturquoise;
+  border-radius: 100px;
+  padding: 10px;
+}
+#order-btn:hover{
+  color: white;
+  background-color: darkcyan;
+  border-radius: 100px;
+  padding: 10px;
+  scale: 110%;
+  transition: 300ms ease;
+}
+
 .btn-acc {
   background-color: #6cea94;
   color: #fff;
-  border: 1px solid #;
+  border: 1px solid;
   padding: 10px 20px;
   border-radius: 40px;
   cursor: pointer;
   font-size: 16px;
 }
 .btn-acc:hover{
-  scale: 110%;
-  transition: 300ms ease;
+  scale: 120%;
+  transition: 3000ms ease;
   background-color: rgb(109, 228, 145);
   color: black;
 }
@@ -332,4 +347,17 @@ input[type="submit"] {
     background-position: 0 175px
   }
 }
-  
+
+.btn-ordr{
+  background-color:lightgreen;
+  border-radius: 100px;
+    padding: 10px;
+    font-size: 20px; 
+    margin: 10px;
+}
+.btn-ordr:hover{
+  scale: 120%;
+  transition: 300ms ease;
+  background-color: green;
+  color:white;
+}
